<resources>
    <string name="app_name">Salary Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gross_income_ant_popieriaus">Gross income (Ant popieriaus)</string>
    <string name="enter_gross">enter gross</string>
    <string name="net_income_i_rankas">Net income (I rankas)</string>
    <string name="enter_net">enter net</string>
    <string name="calculate_net">Calculate Net</string>
    <string name="calculate_gross">Calculate Gross</string>
    <string name="without_npd">Without NPD</string>
</resources>